--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxtjs/tailwindcss": "^6.8.0",
-    "nuxt": "^3.7.0"
+    "nuxt": "^3.7.0",
+    "nuxt-icon": "^0.5.0"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.11"
