--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "nuxt": "^3.7.0",
+    "nuxt-headlessui": "^1.1.4",
     "nuxt-icon": "^0.5.0"
   },
   "dependencies": {
