--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxtjs/tailwindcss": "^6.8.0",
+    "mapbox-gl": "^2.15.0",
     "nuxt": "^3.7.0",
     "nuxt-headlessui": "^1.1.4",
-    "nuxt-icon": "^0.5.0"
+    "nuxt-icon": "^0.5.0",
+    "nuxt-mapbox": "^1.4.3"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.11"
