--- a/package.json
+++ b/package.json
@@ -1,25 +1,30 @@
 {
-  "name": "td-nuxtwind-frontend",
+  "name": "theaterdeck-nuxt-frontend",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
-  "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "@nuxtjs/tailwindcss": "^6.8.0",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.6",
-    "mapbox-gl": "^2.15.0",
-    "nuxt": "^3.7.0",
-    "nuxt-headlessui": "^1.1.4",
-    "nuxt-icon": "^0.5.0",
-    "nuxt-mapbox": "^1.4.3"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint:fix": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@pinia/nuxt": "^0.4.11"
+    "@nuxt/image": "^1.7.0",
+    "@nuxt/ui": "^2.17.0",
+    "@pinia/nuxt": "^0.5.1",
+    "nuxt": "^3.12.3",
+    "vue": "latest"
+  },
+  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447",
+  "devDependencies": {
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "eslint": "^9.6.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.27.0",
+    "prettier": "^3.3.2"
   }
 }
