Small deployment fixes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: '3.8'
-
 services:
-  nuxt-app:
+  frontend:
+    container_name: frontend
+    restart: unless-stopped
     build:
       context: .
       dockerfile: Dockerfile
@@ -15,9 +15,14 @@ services:
       - NUXT_PUBLIC_PRETIX_BASE_URL=${NUXT_PUBLIC_PRETIX_BASE_URL}
       - NUXT_PUBLIC_PRETIX_API_ENDPOINT=${NUXT_PUBLIC_PRETIX_API_ENDPOINT}
       - NUXT_PRETIX_API_KEY=${NUXT_PRETIX_API_KEY}
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/"]
-      interval: 30s
-      timeout: 30s
-      retries: 3
-      start_period: 5s
+    labels:
+      - traefik.enable=true
+      - traefik.docker.network=proxy
+      - traefik.http.routers.frontend.entrypoints=websecure
+      - traefik.http.routers.frontend.rule=Host(`dev2.tdlogblog.de`)
+    networks:
+      - proxy
+
+networks:
+  proxy:
+    external: true
