deployment fixes to align with main, introduce useMockData env flag for event fetching

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,6 @@ NUXT_PUBLIC_MAILHOST="smtp.mandrillapp.com"
 NUXT_PUBLIC_MAILPORT="587"
 NUXT_PUBLIC_MAILUSER="Test-Theaterdeck-Dev2"
 NUXT_PUBLIC_MAILPASS="md-api-key"
+
+# Development Settings
+USE_MOCK_DATA='true'
