--- a/package.json
+++ b/package.json
@@ -30,5 +30,6 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "^9.27.0",
     "prettier": "^3.3.2"
-  }
+  },
+  "license": "UNLICENSED"
 }
