--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,15 @@
 {
-  "semi": false,
-  "singleQuote": true,
-  "trailingComma": "es5"
+	"semi": true,
+	"singleQuote": true,
+	"useTabs": true,
+	"tabWidth": 2,
+	"trailingComma": "es5",
+	"printWidth": 80,
+	"endOfLine": "lf",
+	"arrowParens": "always",
+	"bracketSpacing": true,
+	"embeddedLanguageFormatting": "auto",
+	"plugins": ["prettier-plugin-tailwindcss"],
+	"htmlWhitespaceSensitivity": "ignore",
+	"vueIndentScriptAndStyle": true
 }
