--- a/package.json
+++ b/package.json
@@ -1,35 +1,38 @@
 {
-  "name": "theaterdeck-nuxt-frontend",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "lint:fix": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
-  },
-  "dependencies": {
-    "@nuxt/image": "^1.7.0",
-    "@nuxt/scripts": "^0.8.5",
-    "@nuxt/ui": "^2.17.0",
-    "@nuxtjs/turnstile": "^0.9.4",
-    "@pinia/nuxt": "^0.5.1",
-    "nuxt": "^3.12.3",
-    "nuxt-mail": "^5.0.1",
-    "vue": "latest",
-    "zod": "^3.23.8"
-  },
-  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447",
-  "devDependencies": {
-    "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "eslint": "^9.6.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-vue": "^9.27.0",
-    "prettier": "^3.3.2"
-  },
-  "license": "UNLICENSED"
+	"name": "theaterdeck-nuxt-frontend",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"build": "nuxt build",
+		"dev": "nuxt dev",
+		"generate": "nuxt generate",
+		"preview": "nuxt preview",
+		"postinstall": "nuxt prepare",
+		"lint": "eslint .",
+		"lint:fix": "eslint . --fix",
+		"lint:prettier": "prettier . --check",
+		"lintfix": "eslint . --fix && prettier --write --list-different ."
+	},
+	"dependencies": {
+		"@nuxt/image": "^1.7.0",
+		"@nuxt/scripts": "^0.8.5",
+		"@nuxt/ui": "^2.17.0",
+		"@nuxtjs/turnstile": "^0.9.15",
+		"@pinia/nuxt": "^0.5.1",
+		"nuxt": "^3.16.0",
+		"nuxt-mail": "^5.0.1",
+		"vue": "latest",
+		"zod": "^3.23.8"
+	},
+	"packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447",
+	"devDependencies": {
+		"@iconify-json/mdi": "^1.2.3",
+		"@nuxt/eslint": "^1.2.0",
+		"@nuxt/eslint-config": "^1.2.0",
+		"eslint": "^9.22.0",
+		"prettier": "^3.5.3",
+		"prettier-plugin-tailwindcss": "^0.6.11",
+		"typescript": "^5.8.2"
+	},
+	"license": "UNLICENSED"
 }
