--- a/package.json
+++ b/package.json
@@ -15,17 +15,18 @@
 	},
 	"dependencies": {
 		"@nuxt/image": "^1.7.0",
-		"@nuxt/scripts": "^0.8.5",
+		"@nuxt/scripts": "^0.11.2",
 		"@nuxt/ui": "^2.17.0",
-		"@nuxtjs/turnstile": "^0.9.15",
+		"@nuxtjs/turnstile": "^0.9.16",
 		"@pinia/nuxt": "^0.5.1",
 		"nuxt": "^3.16.0",
 		"nuxt-mail": "^5.0.1",
 		"vue": "latest",
-		"zod": "^3.23.8"
+		"zod": "^3.24.2"
 	},
 	"packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447",
 	"devDependencies": {
+		"@iconify-json/material-symbols": "^1.2.16",
 		"@iconify-json/mdi": "^1.2.3",
 		"@nuxt/eslint": "^1.2.0",
 		"@nuxt/eslint-config": "^1.2.0",
