Contact form works; Implement MailerSend integration for contact form and update environment variables; remove nuxt-mail

--- a/.env.example
+++ b/.env.example
@@ -17,12 +17,14 @@ NUXT_PRETIX_API_KEY="your-secret-key"
 NUXT_PUBLIC_TURNSTILE_SITE_KEY="1x00000000000000000000AA"
 NUXT_TURNSTILE_SECRET_KEY="1x0000000000000000000000000000000AA"
 
-# Mail Set-Up for Contact Form (nuxt-mail)
-NUXT_PUBLIC_CONTACTMAIL="contact@tdlogblog.de"
-NUXT_PUBLIC_MAILHOST="smtp.mandrillapp.com"
-NUXT_PUBLIC_MAILPORT="587"
-NUXT_PUBLIC_MAILUSER="Test-Theaterdeck-Dev2"
-NUXT_PUBLIC_MAILPASS="md-api-key"
+# MailerSender API Key
+NUXT_PUBLIC_MAILERSENDER_API_KEY="your-secret-key"
+
+# Contact Form Settings
+NUXT_PUBLIC_CONTACT_FORM_FROM_NAME="TDLogBlog"
+NUXT_PUBLIC_CONTACT_FORM_FROM_EMAIL="no-reply@tdlogblog.de"
+NUXT_PUBLIC_CONTACT_FORM_RECIPIENT_NAME="Carl Egge"
+NUXT_PUBLIC_CONTACT_FORM_RECIPIENT="carl.egge@web.de"
 
 # Development Settings
 USE_MOCK_DATA='true'
