--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
 		"@nuxt/ui": "^2.17.0",
 		"@nuxtjs/turnstile": "^0.9.16",
 		"@pinia/nuxt": "^0.5.1",
+		"mailersend": "^2.3.0",
 		"nuxt": "^3.16.0",
-		"nuxt-mail": "^5.0.1",
 		"vue": "latest",
 		"zod": "^3.24.2"
 	},
