Add Mailchimp integration for newsletter subscription; update environment variables and form validation

--- a/.env.example
+++ b/.env.example
@@ -26,5 +26,10 @@ NUXT_PUBLIC_CONTACT_FORM_FROM_EMAIL="no-reply@tdlogblog.de"
 NUXT_PUBLIC_CONTACT_FORM_RECIPIENT_NAME="Carl Egge"
 NUXT_PUBLIC_CONTACT_FORM_RECIPIENT="carl.egge@web.de"
 
+# MailChimp Settings
+NUXT_MAILCHIMP_API_KEY="mailchimp-api-key"
+NUXT_MAILCHIMP_SERVER_PREFIX="us13"
+NUXT_MAILCHIMP_AUDIENCE_ID="mailchimp-list-id"
+
 # Development Settings
 USE_MOCK_DATA='true'
