--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"lintfix": "eslint . --fix && prettier --write --list-different ."
 	},
 	"dependencies": {
+		"@mailchimp/mailchimp_marketing": "^3.0.80",
 		"@nuxt/image": "^1.7.0",
 		"@nuxt/scripts": "^0.11.2",
 		"@nuxt/ui": "^2.17.0",
@@ -30,6 +31,7 @@
 		"@iconify-json/mdi": "^1.2.3",
 		"@nuxt/eslint": "^1.2.0",
 		"@nuxt/eslint-config": "^1.2.0",
+		"@types/mailchimp__mailchimp_marketing": "^3.0.21",
 		"eslint": "^9.22.0",
 		"prettier": "^3.5.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
