Update environment files; streamline docker-compose and Nuxt runtime config

--- a/.env.example
+++ b/.env.example
@@ -1,35 +1,53 @@
+# .env.example
 # This file is used to store environment variables for the project.
 # Always update the .env file with the correct values for the environment you are working on.
+# Further information on Nuxt Runtime Config: https://nuxt.com/docs/guide/going-further/runtime-config
+# -------------------------------
+# PRIVATE VARIABLES (never exposed to client)
 
-# Local Base Url: URI where the backend is running in the docker environment
-NUXT_PUBLIC_PRETIX_LOCAL_BASE_URL="http://localhost:8000"
+# Pretix API key (used only on server-side). Please create in pretix dashboard.
+NUXT_PRETIX_API_KEY="your-secret-pretix-api-key"
 
-# Base Url: public URI where the backend is running
-NUXT_PUBLIC_PRETIX_BASE_URL="https://pretix.dev.tdlogblog.de"
+# MailerSender API key
+NUXT_MAILERSENDER_API_KEY="your-secret-mailersender-api-key"
 
-# API Endpoint: API endpoint for the pretix API (including the organizer slug)
-NUXT_PUBLIC_PRETIX_API_ENDPOINT="/api/v1/organizers/td"
+# MailChimp settings (private)
+NUXT_MAILCHIMP_SERVER_PREFIX="us13"
+NUXT_MAILCHIMP_API_KEY="your-mailchimp-api-key"
+NUXT_MAILCHIMP_AUDIENCE_ID="your-mailchimp-audience-id"
 
-# Pretix API Key for this organizer/team (create in backend dashboard)
-NUXT_PRETIX_API_KEY="your-secret-key"
-
-# Cloudflare CAPTCHA
-NUXT_PUBLIC_TURNSTILE_SITE_KEY="1x00000000000000000000AA"
+# Cloudflare Turnstile secret (private)
 NUXT_TURNSTILE_SECRET_KEY="1x0000000000000000000000000000000AA"
 
-# MailerSender API Key
-NUXT_PUBLIC_MAILERSENDER_API_KEY="your-secret-key"
 
-# Contact Form Settings
+# -------------------------------
+# PUBLIC VARIABLES (exposed to client)
+
+# Local base URL (used for docker internal communication)
+# On Server use 'http://backend' to connect through docker internal network to backend
+NUXT_PUBLIC_PRETIX_LOCAL_BASE_URL="http://localhost:8000"
+
+# Public base URL (the endpoint your users will reach)
+NUXT_PUBLIC_PRETIX_BASE_URL="https://pretix.dev2.tdlogblog.de"
+
+# API endpoint for Pretix (including organizer slug)
+NUXT_PUBLIC_PRETIX_API_ENDPOINT="/api/v1/organizers/td"
+
+# Cloudflare Turnstile site key (public)
+NUXT_PUBLIC_TURNSTILE_SITE_KEY="1x00000000000000000000AA"
+
+# Contact form settings
 NUXT_PUBLIC_CONTACT_FORM_FROM_NAME="TDLogBlog"
 NUXT_PUBLIC_CONTACT_FORM_FROM_EMAIL="no-reply@tdlogblog.de"
 NUXT_PUBLIC_CONTACT_FORM_RECIPIENT_NAME="Carl Egge"
 NUXT_PUBLIC_CONTACT_FORM_RECIPIENT="carl.egge@web.de"
 
-# MailChimp Settings
-NUXT_MAILCHIMP_API_KEY="mailchimp-api-key"
-NUXT_MAILCHIMP_SERVER_PREFIX="us13"
-NUXT_MAILCHIMP_AUDIENCE_ID="mailchimp-list-id"
+# Option to use mock data in development (as string; “true” or “false”)
+NUXT_PUBLIC_USE_MOCK_DATA="true"
 
-# Development Settings
-USE_MOCK_DATA='true'
+
+# -------------------------------
+# Additional configuration
+
+# Domain for Traefik routing (used in your docker-compose labels)
+DOMAIN="dev.tdlogblog.de"
