fix: important production fixes

--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ NUXT_TURNSTILE_SECRET_KEY="1x0000000000000000000000000000000AA"
 # PUBLIC VARIABLES (exposed to client)
 
 # Local base URL (used for docker internal communication)
-# On Server use 'http://backend' to connect through docker internal network to backend
+# On Server use 'http://backend:8000' to connect through docker internal network to backend
 NUXT_PUBLIC_PRETIX_LOCAL_BASE_URL="http://localhost:8000"
 
 # Public base URL (the endpoint your users will reach)
