--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - traefik.docker.network=proxy
       - traefik.http.routers.frontend.entrypoints=websecure
       - traefik.http.routers.frontend.rule=Host(`${DOMAIN}`)
+    volumes:
+      - ./logs:/app/logs
     networks:
       - proxy
 
