--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@nuxt/image": "^1.7.0",
 		"@nuxt/scripts": "^0.11.2",
 		"@nuxt/ui": "^2.17.0",
+		"@nuxtjs/leaflet": "1.2.6",
 		"@nuxtjs/turnstile": "^0.9.16",
 		"@pinia/nuxt": "^0.5.1",
 		"mailersend": "^2.3.0",
