add game icons as dependencies

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	},
 	"packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447",
 	"devDependencies": {
+		"@iconify-json/game-icons": "^1.2.3",
 		"@iconify-json/material-symbols": "^1.2.16",
 		"@iconify-json/mdi": "^1.2.3",
 		"@nuxt/eslint": "^1.2.0",
