--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@nuxtjs/turnstile": "^0.9.16",
 		"@pinia/nuxt": "^0.5.1",
 		"mailersend": "^2.3.0",
+		"markdown-it": "^14.1.0",
 		"nuxt": "^3.16.0",
 		"vue": "latest",
 		"zod": "^3.24.2"
